# Computer_Vision

./: .gitignore  CMakeLists.txt  DetectSilence.cc  DetectWink.cc  README.md
